# android_jni_rust_example

./: Cargo.toml  README.md  makefile
.cargo/: config.toml
java/: HelloWorld.java  com_eactative_ua_rn_HelloWorld.h
src/: async_try.rs  client.rs  lib.rs  main.rs  sqlite.rs
