[package]
name = "jni-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(any(target_os = "android", target_os = "macos"))'.dependencies]
jni = "0.19.0"

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
openssl-sys = { version = "0.9.76", features = ["vendored"] }


[lib]
crate_type = ["cdylib"]